bg, logos and layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Latinos don't want more pollution.">
+    <meta name="author" content="Latinos">
 
-    <title>Latinos for a clean home</title>
+    <title>My Home Sin Polución</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <!-- Facebook og tags -->
+    <meta property="og:title" content="My Home Sin Polución" />
+    <meta property="og:site_name" content="Latinos have spoken"/>
+    <meta property="og:url" content="http://myhomesinpolucion.org" />
+    <meta property="og:description" content="Latinos don't want more pollution." />
+    <!--meta property="fb:app_id" content="[FB_APP_ID]" /-->
+    <meta property="og:image" content="/img/myhomesinpolucion.jpg" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +48,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Enviro</span> Latinos
+                    <i class="fa fa-home"></i>  <span class="light">My Home</span> Sin Polucion
                 </a>
             </div>
 
@@ -53,13 +60,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Graphics</a>
+                        <a class="page-scroll" href="#results">Results</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Results</a>
+                        <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#partners">Partners</a>
                     </li>
                 </ul>
             </div>
@@ -73,10 +80,18 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
+                     <!--div class="col-md-6">
+                        <p>Latino Decicions result</p>
+                        
+                     </div>
+                     <div class="col-md-6">
+                        <p>Latino Decicions result</p>
+                        
+                     </div-->
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Community</h1>
                         <p class="intro-text">Our community has spoken.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#results" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -85,14 +100,49 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <!-- Results Section -->
+    <section id="results" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            <h2>Results here</h2>
+        </div>
+        <div class="row">
+            <h2>Share our Graphics</h2>
+            <div class="col-lg-12">
+                <div class="col-md-6">
+                    <img src="/img/graphic.png" width="100%"/>
+                    <div class="row">
+                        <div class="col-sm-4">Facebook</div>
+                        <div class="col-sm-4">Twitter</div>
+                        <div class="col-sm-4">Email</div>
+                    </div>
+                    <br/>
+                </div>
+                <div class="col-md-6">
+                    <img src="/img/graphic.png" width="100%"/>
+                    <div class="row">
+                        <div class="col-sm-4">Facebook</div>
+                        <div class="col-sm-4">Twitter</div>
+                        <div class="col-sm-4">Email</div>
+                    </div>
+                    <br/>
+                </div>
+                <div class="col-md-6">
+                    <img src="/img/graphic.png" width="100%"/>
+                    <div class="row">
+                        <div class="col-sm-4">Facebook</div>
+                        <div class="col-sm-4">Twitter</div>
+                        <div class="col-sm-4">Email</div>
+                    </div>
+                    <br/>
+                </div>
+                <div class="col-md-6">
+                    <img src="/img/graphic.png" width="100%"/>
+                    <div class="row">
+                        <div class="col-sm-4">Facebook</div>
+                        <div class="col-sm-4">Twitter</div>
+                        <div class="col-sm-4">Email</div>
+                    </div>
+                </div>                
             </div>
         </div>
     </section>
@@ -102,19 +152,29 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Download PDF Report</h2>
+                    <!--p>You can download the report here.</p-->
+                    <a href="http://presente.org" target="_blank" class="btn btn-default btn-lg">Download</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="partners" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
+            <h2>Partners</h2>
+            <div class="col-lg-12">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-2"><div><a href="http://caleja.org/" target="_blank"><img src="/img/CEJA.jpg" width="100%" style="padding-bottom:10px;"/></a></div></div>
+                <div class="col-sm-2"><div><a href="http://www.psr-la.org/" target="_blank"><img src="/img/PSR.jpg" width="100%" style="padding-bottom:10px;"/></a></div></div>
+                <div class="col-sm-2"><div><a href="http://presente.org/" target="_blank"><img src="/img/presente.jpg" width="100%" style="padding-bottom:10px;"/></a></div></div>
+                <div class="col-sm-2"><div><a href="http://greenlining.org/" target="_blank"><img src="/img/greenlining.png" width="100%" style="padding-bottom:10px;"/></a></div></div>
+                <div class="col-sm-2"><div><a href="http://www.cbecal.org/" target="_blank"><img src="/img/CBE.jpg" width="100%" style="padding-bottom:10px;"/></a></div></div>
+                <div class="col-sm-1"></div>
+            </div>
+            <!--div class="col-lg-8 col-lg-offset-2">
+                <h2>Share our Graphics</h2>
                 <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
                 <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
                 </p>
@@ -129,17 +189,17 @@
                         <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
-            </div>
+            </div-->
         </div>
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!--div id="map"></div-->
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright © My Home Sin Polucion <script>document.write(new Date().getFullYear())</script>.</p>
         </div>
     </footer>
 
@@ -157,6 +217,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
+    <!-- ShareProgress JavaScript -->
+    <script src="//c.shpg.org/166/sp.js"></script>
 
 </body>
 
