Share buttons to site

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <a class="navbar-brand page-scroll" href="#page-top">
                     <i class="fa fa-home"></i>  <span class="light">My Home</span> Sin Polucion
                 </a>
+                <span style="font-size:.8em;"><a href="http://shpg.org/166/15318/facebook" target="_blank" style="color: #42dca3;"><i class="fa fa-facebook fa-fw"></i>Share</a> | <a href="http://shpg.org/166/15319/twitter" target="_blank" style="color: #42dca3;"><i class="fa fa-twitter fa-fw"></i>Tweet</a></span>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
